adding controller tests